# tech-interview

./: .gitignore  README.md
C++/check_brackets/: README  check_brackets.cpp
C++/employee/: CMakeLists.txt  Doxyfile  README.dox
C++/employee/include/: Employee.h
C++/employee/src/: main.cpp  unit_tests.cpp
C++/fibonacci/: README  fibonacci.cpp
C++/gcd/: README  gcd.cpp
C++/graph/: disjoint_set.h  graph.h  graph_sim.h  main.cpp  mst_data.txt
C++/kmeans/: CMakeLists.txt
C++/max_pair_product/: README  max_pair_prod.cpp
C++/point/: Makefile  main.cpp  point.cpp  point.h
C++/poker/: Makefile  card.h  card_deck.h  deck.h  main.cpp  poker.h
C++/polish/: BinaryNode.h  IntNode.h  LeafNode.h  Makefile  Node.h  Tree.h  UnaryNode.h  VarNode.h  main.cpp
C++/slist/: Makefile  main.cpp  slist.h  slist_node.h
C++/student/: CMakeLists.txt  Doxyfile  GradStudent.h  Makefile  README.dox  Student.h  main.cpp
Keras/: cnn.py
Keras/dl_visualizer/: DLVisualizer.py
Keras/face_identifier/: FaceEmbedding.py  FaceIdentifier.py  unit_test.py
Keras/recommendation_system/: RecommendationSystem.py  unit_test.py
Keras/text_generator/: Main.py  TextGenerator.py  republic_word2int_map.pkl
Keras/text_preprocessor/: TextPreProcessor.py
Python/Binary Tree/: BinarySearchTree.py  BinaryTree.py  Main.py
Python/Hash Table/: HashTable.py  Main.py  PhoneBook.py
Python/Matrix Multiplication/: matmul.py
Python/Movies/: entertainment_center.py  media.py
SystemC/xor/: CMakeLists.txt
SystemC/xor/include/: monitor.h  xor.h
SystemC/xor/src/: main.cpp
(+50 files in other folders)
